Fixed a bug where requirements where not reported when defined in WebTestScenario tests