@@ -1,13 +1,16 @@
 package net.serenitybdd.core.webdriver.driverproviders;
 
+import net.serenitybdd.core.environment.EnvironmentSpecificConfiguration;
 import net.serenitybdd.core.webdriver.enhancers.CustomDriverEnhancer;
 import net.thucydides.core.ThucydidesSystemProperty;
 import net.thucydides.core.reflection.ClassFinder;
 import net.thucydides.core.util.EnvironmentVariables;
 import org.openqa.selenium.WebDriver;
 
-import java.util.Arrays;
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class EnhanceDriver {
 
@@ -23,32 +26,37 @@ public class EnhanceDriver {
 
     public WebDriver to(WebDriver driver) {
 
-        List<Class<?>> customDriverEnhancers
-                = ClassFinder.loadClasses()
-                             .thatImplement(CustomDriverEnhancer.class)
-                             .fromPackage("net.serenitybdd");
+        List<Class<CustomDriverEnhancer>> customDriverEnhancers
+                = new ArrayList<>(ClassFinder.loadClasses()
+                .thatImplement(CustomDriverEnhancer.class)
+                .fromPackage("net.serenitybdd")
+                .stream().map(extension -> (Class<CustomDriverEnhancer>) extension)
+                .collect(Collectors.toList()));
 
-        String extensionPackageList = ThucydidesSystemProperty.SERENITY_EXTENSION_PACKAGES.from(environmentVariables);
-        if (extensionPackageList != null) {
-            List<String> extensionPackages = Arrays.asList(extensionPackageList.split(","));
-            extensionPackages.forEach(
-                    extensionPackage ->
-                            customDriverEnhancers.addAll(ClassFinder.loadClasses()
-                                                                  .thatImplement(CustomDriverEnhancer.class)
-                                                                  .fromPackage(extensionPackage))
-            );
-        }
+        customDriverEnhancers.addAll(customEnhancers());
 
         customDriverEnhancers.forEach(
                 enhancerType -> {
                     try {
-                        ((CustomDriverEnhancer)enhancerType.newInstance()).apply(environmentVariables, driver);
-                    } catch (InstantiationException | IllegalAccessException e) {
-                        e.printStackTrace();
+                        (enhancerType.getDeclaredConstructor().newInstance()).apply(environmentVariables, driver);
+                    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+                        throw new WebDriverInitialisationException("Failed to instantiate custom driver enhancer " + enhancerType.getName(), e);
                     }
                 }
         );
 
         return driver;
     }
+
+    private List<Class<CustomDriverEnhancer>> customEnhancers() {
+        List<String> extensionPackages = EnvironmentSpecificConfiguration.from(environmentVariables)
+                .getListOfValues(ThucydidesSystemProperty.SERENITY_EXTENSION_PACKAGES);
+        return extensionPackages.stream().flatMap(
+                extensionPackage -> ClassFinder.loadClasses()
+                        .thatImplement(CustomDriverEnhancer.class)
+                        .fromPackage(extensionPackage)
+                        .stream().map(extension -> (Class<CustomDriverEnhancer>) extension)
+        ).collect(Collectors.toList());
+    }
+
 }
